force-app/main/default/objects/Inventory__c/fields/Inventory_Units__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Units__c</fullName>
    <label>Inventory Units</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>