force-app/main/default/objects/Inventory__c/fields/IsNonInventory__c.field-meta.xml
<CustomField>
    <fullName>IsNonInventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNonInventory</label>
    <type>Checkbox</type>
</CustomField>