force-app/main/default/objects/Inventory__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <label>Stock Quantity</label>
    <summarizedField>Inventory_Transaction__c.Quantity__c</summarizedField>
    <summaryForeignKey>Inventory_Transaction__c.Product_Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>